tests/errors/types/unknown_return_type.ne
function a(): notExistingType
{
    // do nothing
}

function main(): int32
{
    
}
